<resources>
    <string name="app_name">SynthePass</string>
    <string name="eButton">Low E</string>
    <string name="fButton">Low F</string>
    <string name="aButton">A</string>
    <string name="bButton">B</string>
    <string name="bbButton">B Flat</string>
    <string name="cButton">C</string>
    <string name="csButton">C Sharp</string>
    <string name="dButton">D</string>
    <string name="dsButton">D Sharp</string>
    <string name="fsButton">F Sharp</string>
    <string name="gButton">Low G</string>
    <string name="gsButton">G Sharp</string>
    <string name="heButton">High E</string>
    <string name="hfButton">High F</string>
    <string name="hfsButton">High F Sharp</string>
    <string name="hgButton">High G</string>
    <string name="foButton">Set Your Synth</string>
    <string name="okButton">Okay</string>
    <string name="welcome">Thank you for choosing SynthePass.</string>
    <string name="rstButton">Reset</string>
    <string name="noButton">Enter Your Synth</string>
    <string name="loButton">Lock</string>
    <string name="incorrectPass">Incorrect Password</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SynthePass</string>
    <string name="nav_header_subtitle">samchihak@me.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="resButton">Reset</string>
    <string name="noPass">No SynthePass detected. Please press <b>SET YOUR SYNTH</b> to set a password.</string>
    <string name="incPass">Incorrect password. Please press reset and try again.</string>
    <string name="appTitle">App</string>
    <string name="pwTitle">Password</string>
    <string name="navProf">Profile</string>
    <string name="navPass">Passwords</string>
    <string name="title_activity_profile">Profile</string>
    <string name="dspButton">Delete Synth</string>
    <string name="dspWarning">Warning: This action erase all data. Press DELETE SYNTH again to proceed.</string>
    <string name="hintApp">Enter App</string>
    <string name="hintPass">Enter Password</string>
    <string name="saveButton">Save</string>
    <string name="cheapSpace">Click Buttons Below to Save</string>
    <string name="saveFive">Save Password Five</string>
    <string name="saveFour">Save Password Four</string>
    <string name="saveThree">Save Password Three</string>
    <string name="saveTwo">Save Password Two</string>
    <string name="saveOne">Save Password One</string>
    <string name="setYour">Set Your SynthePass!</string>
    <string name="setInstructions">Press a sequence of four keys and then press okay.</string>
    <string name="retPassButton">Retrieve Passwords</string>
</resources>
