<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Synthesizer"
    tools:layout_editor_absoluteY="81dp"
    style="?android:attr/buttonBarStyle">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/aButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/aButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="92dp" />

            <Button
                android:id="@+id/bButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/bButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="92dp" />

            <Button
                android:id="@+id/cButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/cButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="92dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dButton"

                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/dButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/eButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/eButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/fButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/fButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="296dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/gButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/gButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="266dp"
                tools:layout_editor_absoluteY="296dp" />

            <Button
                android:id="@+id/heButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/heButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/hfButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/hfButton"
                android:textColor="@color/colorPrimaryDark"

                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="296dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/hgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/hgButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="420dp" />

            <Button
                android:id="@+id/gsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/gsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="264dp"
                tools:layout_editor_absoluteY="361dp" />

            <Button
                android:id="@+id/fsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/fsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="361dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/csButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/csButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/bbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/bbButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/dsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/dsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="230dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/hfsButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/hfsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="361dp" />


        </TableRow>
    </TableLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="88dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/okButton"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/resButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/resButton"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/incPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="27dp"
        android:text="@string/incPass"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.98" />

</android.support.constraint.ConstraintLayout>