<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Synthesizer"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/aButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/aButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="92dp" />

            <Button
                android:id="@+id/bButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/bButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="92dp" />

            <Button
                android:id="@+id/cButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/cButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="92dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/dButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/eButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/eButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/fButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/fButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="296dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/gButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/gButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="266dp"
                tools:layout_editor_absoluteY="296dp" />

            <Button
                android:id="@+id/heButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/heButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/hfButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/hfButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="296dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/hgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/hgButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="420dp" />

            <Button
                android:id="@+id/gsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/gsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="264dp"
                tools:layout_editor_absoluteY="361dp" />

            <Button
                android:id="@+id/fsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/fsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="361dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/csButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/csButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/bbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/bbButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/dsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/dsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="230dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/hfsButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/hfsButton"
                android:textColor="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="361dp" />


        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="200dp"
        android:layout_weight="1"
        android:text="Set Your SynthePass!"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="139dp"
        android:text='Press a sequence of four keys and then press "okay".'
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="71dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/okButton"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toEndOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/rstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="71dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/rstButton"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.56" />

</android.support.constraint.ConstraintLayout>